[package]
name = "projeto_maio"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.0", features = ["full"] }
dotenv = "0.15"
chrono = "0.4"
